--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -77,7 +77,7 @@ image::5.jpg[]
 image::6.jpg[]
 Рисунок 4 - Канал для подключения переменного резистора с платы  Accessory Shield
 
-Резистор - это линейный элмент, поэтому будем использовать линейную функцию следующего вида.
+Резистор - это линейный элемент, поэтому будем использовать линейную функцию следующего вида.
 
 image::7.jpg[]
 
@@ -118,4 +118,54 @@ image::7.jpg[]
 image::8.jpg[] 
 Рисунок 4 
 
+=== 7. Цифровой фильтр
 
+Фильтр будет реализован в новом классе, который будет иметь входное и выходное значение.
+
+image::9.jpg[] 
+
+В техническом задание указанно, что период измерения должен быть 50 мс. Поскольку фильтр имеет свое значение периода измерения dt = 100 мс, поэтому и в тз будет 100 мс.
+
+=== 8. PWM
+
+Широтно-импульсная модуляция (ШИМ) представляет собой импульсный сигнал постоянной частоты и переменной скважности. +
+Скважность – отношение периода к длительности импульса. Обратная величина называется коэффициентом заполнения. +
+Режим широтно-импульсной модуляции позволяет генерировать сигнал с частотой, определяемой значением регистра TIMx_ARR, и рабочим циклом, определяемым значением
+регистра TIMx_CCRx.
+Поскольку регистры предварительной загрузки передаются в теневые регистры только при возникновении события обновления, перед запуском счетчика необходимо инициализировать все регистры, установив бит UG в регистре TIMx_EGR.
+
+=== 9. Общение с платой через USART2
+
+Асинхронный способ передачи данных — такой способ передачи цифровых данных от передатчика к приемнику по последовательному интерфейсу, при котором данные передаются в любой момент времени. Синхронизация идет по времени — приемник и передатчик заранее договариваются о том на какой частоте будет идти обмен
+
+Синхронны способ передачи данных - способ передачи цифровых данных по последовательному интерфейсу, при котором приемнику и передатчику известно время передачи данных, то есть, передатчик и приемник работают синхронно, в такт. +
+Протокол передачи данных: +
+Для асинхронной передачи UART достаточно всего двух сигнальных линий – TX (Transmit) и RX (Receive). В начале передачи передатчик устнавливает линию в низкий уровень — это старт бит. Приемник, определив, что линия просела, интервал равный времени одного такта и считывает первый бит. С каждым тактом, передачик выставляет новый бит, а приемник принимает их. Последний бит это стоп бит. +
+Для настройки и работы модуля UART нужны всего несколько регистра +
+- USART_CR1/CR2/CR3 - регистр настройки 1; +
+- USART_DR - регистр принятого символа (регистр данных); +
+- USART_BRR – регистр настройки скорости передачи; +
+- USART_SR - регистр состояния. +
+Регистр CR1 - регистр управления (рисунок 5).
+
+image::10.jpg[] 
+Рисунок 5
+
+[horizontal]
+Bit15: OVER8:: Режим дискретизации​
+* *0*: 1/16​
+* *1*: 1/8​
+
+Bit13: UE:: Включение модуля USART​
+* *0*: Отключить​
+* *1*: Включить​
+
+Bit12: M:: Длина символа​
+* *0*: 1 Стартовый бит, 8 бит данных​
+* *1*: 1 Стартовый бит, 9 бит данных
+
+Bit7: TXEIE:: Разрешить прерывание по передаче
+Bit6 TCIE:: Разрешить прерывание по концу передачи
+Bit5: RXNEIE:: Разрешить прерывание по приему
+Bit3: TE:: Разрешить передачу
+Bit2: RE:: Разрешить прием
