--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -146,6 +146,7 @@ image::9.jpg[]
 - USART_DR - регистр принятого символа (регистр данных); +
 - USART_BRR – регистр настройки скорости передачи; +
 - USART_SR - регистр состояния. +
+
 Регистр CR1 - регистр управления (рисунок 5).
 
 image::10.jpg[] 
@@ -169,3 +170,22 @@ Bit6 TCIE:: Разрешить прерывание по концу переда
 Bit5: RXNEIE:: Разрешить прерывание по приему
 Bit3: TE:: Разрешить передачу
 Bit2: RE:: Разрешить прием
+
+Регистр SR - регистр статуса (рисунок 6).
+
+image::11.jpg[] 
+Рисунок 6
+
+[horizontal]
+Bit7: TXE:: Регистр данных передачи пуст. Этот бит устанавливается аппаратно, когда содержимое регистра данных передачи перемещается в сдвиговый регистр. Установка этого бита может генерировать прерывание, если установлен TXEIE бит = 1 в регистре USART_CR1. Этот бит очищается когда просходит запись в регистр данных UASRT_DR. ​
+* *0*: Данные не перемещены в сдвиговый регистр ​
+* *1*: Данные перемещены в сдвиговый регистр
+
+Bit6: TC:: Передача завершена. Этот бит устанавливается когда сдвиговый регистр тоже опустошался и стоит бит TXE. Установка этого бита также может генерировать прервывание если установлен бит TCIE=1 в регистре USART_CR1. Очищается программно, путем записи 0​
+* *0*: Передача не завершена​
+* *1*: Передача завершена​
+
+Bit5: RXNE:: Регистр данных чтения не пуст. Этот бит устанавливается когда содержимое сдвигового регистра перемещается в регистр данных USART_DR.  Установка этого бита генерирует прерывание , если установлен бит RXNEIE=1 в регистре USART_CR1. Этот бит очищается, сразу после чтения из регистра данных USART_DR.  Также этот бит может быть очищен посредством записи 0 в него​
+* *0*: Данные не приняты​
+* *1*: Данные готовы для чтения
+
