--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -189,3 +189,14 @@ Bit5: RXNE:: Регистр данных чтения не пуст. Этот б
 * *0*: Данные не приняты​
 * *1*: Данные готовы для чтения
 
+Регистр данных​
+*USART_DR* — Регистр данных. При передачи, посылаемый символ должен быть записан в этот регистр.  При приеме, принятый символ нужно прочитать из этого регистра. Занимает 32 бита из которых используются только 9 (!) первых бит, остальные принудительно зануляются аппаратно.
+
+=== Регистра настройки скорости передачи
+*USART_BRR* — Регистр настройки скорости передачи. Первые его два байта определяют частоту передачи. Вторые принудительно ноль.
+
+image::Image9.png[400, 1024]
+
+Для вычисления скорости используется следующая формула ​
+
+* USARTDIV = CLK/(BaudRate*8*(2 - OVER8))​
