--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -192,10 +192,10 @@ Bit5: RXNE:: Регистр данных чтения не пуст. Этот б
 Регистр данных​
 *USART_DR* — Регистр данных. При передачи, посылаемый символ должен быть записан в этот регистр.  При приеме, принятый символ нужно прочитать из этого регистра. Занимает 32 бита из которых используются только 9 (!) первых бит, остальные принудительно зануляются аппаратно.
 
-=== Регистра настройки скорости передачи
+Регистра настройки скорости передачи USART_BRR +
 *USART_BRR* — Регистр настройки скорости передачи. Первые его два байта определяют частоту передачи. Вторые принудительно ноль.
 
-image::Image9.png[400, 1024]
+image::12.jpg
 
 Для вычисления скорости используется следующая формула ​
 
