--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -195,7 +195,7 @@ Bit5: RXNE:: Регистр данных чтения не пуст. Этот б
 Регистра настройки скорости передачи USART_BRR +
 *USART_BRR* — Регистр настройки скорости передачи. Первые его два байта определяют частоту передачи. Вторые принудительно ноль.
 
-image::12.jpg
+image::12.jpg[] 
 
 Для вычисления скорости используется следующая формула ​
 
