--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -201,3 +201,6 @@ image::12.jpg[]
 Для вычисления скорости используется следующая формула ​
 
 * USARTDIV = CLK/(BaudRate*8*(2 - OVER8))​
+
+=== 10. Операционная система реального времени FreeRTOS и С++
+
