--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -204,3 +204,5 @@ image::12.jpg[]
 
 === 10. Операционная система реального времени FreeRTOS и С++
 
+Операционная система реального времени (ОСРВ, англ. real-time operating system, RTOS) — тип операционной системы, основное назначение которой — предоставление необходимого и достаточного набора функций для проектирования, разработки и функционирования систем реального времени на конкретном аппаратном оборудовании.
+
