--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -204,5 +204,26 @@ image::12.jpg[]
 
 === 10. Операционная система реального времени FreeRTOS и С++
 
-Операционная система реального времени (ОСРВ, англ. real-time operating system, RTOS) — тип операционной системы, основное назначение которой — предоставление необходимого и достаточного набора функций для проектирования, разработки и функционирования систем реального времени на конкретном аппаратном оборудовании.
+Операционная система реального времени (ОСРВ, англ. real-time operating system, RTOS) — тип операционной системы, основное назначение которой — предоставление необходимого и достаточного набора функций для проектирования, разработки и функционирования систем реального времени на конкретном аппаратном оборудовании. +
+
+Операционные системы реального времени (*ОСРВ*, по англ. *RTOS*)  предназначены для
+обеспечения интерфейса к ресурсам критических по времени систем реального времени.
+Основной задачей в таких системах является своевременность (_timeliness_) выполнения
+обработки данных.
+
+*FreeRTOS* — многозадачная _операционная система реального времени_ (*ОСРВ*) для встраиваемых систем.
+
+Важные понятия *RTOS*:
+
+*Системный тик*
+
+Один из таймеров микроконтроллера настраивают на генерацию системных тиков.
+Один тик делается, обычно, раз в 1 мс, но можно и чаще или реже.
+В зависимости от того какая реакция и дискретность системы нам нужна.
+
+image::13.jpg[]
+Рисунок 9 - Системный тик
+
+__Каждый *tick* - это вызов прерывания таймера, в котором вызывается диспетчер, чьими усилиями
+проворачиваются шестеренки ОС. __
 
