--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -95,7 +95,10 @@ image::7.jpg[]
 19  аналоговых каналов,  16 из которых которые могут сконфигурированы на работу от внешних источников или 3 внутренних.
 Внешние каналы поступают на мультиплексор, где выбирается только один из них. Т.е. в один момент времени может быть измерено напряжение только с одного канала.
 Результат преобразования сохраняется в регистрах данных. Для регулярных каналов это только один 16 битный регистр. Для инжектированных – 4. +
-Запуск преобразования может быть как программным, так и внешним. Внешний запуск может происходить от таймеров или с двух внешних входов.
+Запуск преобразования может быть как программным, так и внешним. Внешний запуск может происходить от таймеров или с двух внешних входов. +
+Функицональное описание АЦЦ представлена на рисунке 5. +
+
+image::14.jpg[]
 
 === 6. Механизм DMA
 
