--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -96,9 +96,10 @@ image::7.jpg[]
 Внешние каналы поступают на мультиплексор, где выбирается только один из них. Т.е. в один момент времени может быть измерено напряжение только с одного канала.
 Результат преобразования сохраняется в регистрах данных. Для регулярных каналов это только один 16 битный регистр. Для инжектированных – 4. +
 Запуск преобразования может быть как программным, так и внешним. Внешний запуск может происходить от таймеров или с двух внешних входов. +
-Функицональное описание АЦЦ представлена на рисунке 5. +
+Функицональное описание АЦП представлена на рисунке 5. +
 
 image::14.jpg[]
+Рисунко 5
 
 === 6. Механизм DMA
 
@@ -116,10 +117,10 @@ image::14.jpg[]
 2. Сохранение данных, загруженных во внутренний регистр в указанное место. Им может быть периферийный модуль или адрес в памяти. +
 3. Увеличение адресов источника и приемника при необходимости. +
 
-Из справочного руководства в таблице 28, можно увидеть к какому каналу подходит АЦП (рисунок 4).+
+Из справочного руководства в таблице 28, можно увидеть к какому каналу подходит АЦП (рисунок 6).+
 
 image::8.jpg[] 
-Рисунок 4 
+Рисунок 6
 
 === 7. Цифровой фильтр
 
@@ -150,10 +151,10 @@ image::9.jpg[]
 - USART_BRR – регистр настройки скорости передачи; +
 - USART_SR - регистр состояния. +
 
-Регистр CR1 - регистр управления (рисунок 5).
+Регистр CR1 - регистр управления (рисунок 7).
 
 image::10.jpg[] 
-Рисунок 5
+Рисунок 7
 
 [horizontal]
 Bit15: OVER8:: Режим дискретизации​
@@ -174,10 +175,10 @@ Bit5: RXNEIE:: Разрешить прерывание по приему
 Bit3: TE:: Разрешить передачу
 Bit2: RE:: Разрешить прием
 
-Регистр SR - регистр статуса (рисунок 6).
+Регистр SR - регистр статуса (рисунок 8).
 
 image::11.jpg[] 
-Рисунок 6
+Рисунок 8
 
 [horizontal]
 Bit7: TXE:: Регистр данных передачи пуст. Этот бит устанавливается аппаратно, когда содержимое регистра данных передачи перемещается в сдвиговый регистр. Установка этого бита может генерировать прерывание, если установлен TXEIE бит = 1 в регистре USART_CR1. Этот бит очищается когда просходит запись в регистр данных UASRT_DR. ​
@@ -195,11 +196,11 @@ Bit5: RXNE:: Регистр данных чтения не пуст. Этот б
 Регистр данных USART_DR (рисунок 7).
 USART_DR — Регистр данных. При передачи, посылаемый символ должен быть записан в этот регистр.  При приеме, принятый символ нужно прочитать из этого регистра. Занимает 32 бита из которых используются только 9 (!) первых бит, остальные принудительно зануляются аппаратно.
 
-Регистра настройки скорости передачи USART_BRR (рисунок 8).
+Регистра настройки скорости передачи USART_BRR (рисунок 9).
 *USART_BRR* — Регистр настройки скорости передачи. Первые его два байта определяют частоту передачи. Вторые принудительно ноль.
 
 image::12.jpg[] 
-Рисунок 8
+Рисунок 9
 
 Для вычисления скорости используется следующая формула ​
 
@@ -225,7 +226,7 @@ image::12.jpg[]
 В зависимости от того какая реакция и дискретность системы нам нужна.
 
 image::13.jpg[]
-Рисунок 9 - Системный тик
+Рисунок 10 - Системный тик
 
 __Каждый *tick* - это вызов прерывания таймера, в котором вызывается диспетчер, чьими усилиями
 проворачиваются шестеренки ОС. __
