--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -68,8 +68,9 @@ image::4.jpg[]
 
 === 4. Переменный резистор
 
-Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. +
-Переменный резистор находится на плате расширения  Accessory Shield с номиналом 10 кОм и подключается к каналу А0 (рисунок 5), дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 6).
+Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. + 
+Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор, дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 3).
+
 
 image::5.jpg[]
 Рисунок 3 - Переменный резистор с платы  Accessory Shield
