--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -69,7 +69,7 @@ image::4.jpg[]
 === 4. Переменный резистор
 
 Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. + 
-Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор, дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 3).
+Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор (рисунок 3), дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 4).
 
 
 image::5.jpg[]
