--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -69,11 +69,13 @@ image::4.jpg[]
 === 4. Переменный резистор
 
 Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. + 
-Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор (рисунок 3), дальше подключается к плате XNUCLEO-F411RE через канал PA0 (рисунок 4).
+Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор (рисунок 3).
 
 
 image::5.jpg[]
 Рисунок 3 - Переменный резистор с платы  Accessory Shield
+
+На рисунке 4 изображено на какой контакт приходит контакт с переменного резистора, также взятого из документа на плату XNUCLLEO-F411RE «xnuclleo - f411re shematic».
 
 image::6.jpg[]
 Рисунок 4 - Канал для подключения переменного резистора с платы  Accessory Shield
