--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -77,7 +77,7 @@ image::5.jpg[]
 
 На рисунке 4 изображено на какой контакт приходит контакт с переменного резистора, также взятого из документа на плату XNUCLLEO-F411RE «xnuclleo - f411re shematic».
 
-image::6.jpg[]
+image::6.png[]
 Рисунок 4 - Канал для подключения переменного резистора с платы  Accessory Shield
 
 Резистор - это линейный элемент, поэтому будем использовать линейную функцию следующего вида.
