--- a/lab10/lab10.adoc
+++ b/lab10/lab10.adoc
@@ -172,8 +172,8 @@ using tIntVectItem = union {tIntFunct __fun; void * __ptr;};
 #pragma location = ".intvec"
 const tIntVectItem __vector_table[] =
 {
-  { .__ptr = __sfe( "CSTACK" ) }, //????????????? ????????? ?? ????
-    __iar_program_start, //????? ??????? ????? ????? ? ?????????
+  { .__ptr = __sfe( "CSTACK" ) }, 
+    __iar_program_start,
 
   InterruptHandler::DummyHandler,
   InterruptHandler::DummyHandler,
