--- a/cursovoi/Course_Work_Leonov_Platonov.adoc
+++ b/cursovoi/Course_Work_Leonov_Platonov.adoc
@@ -109,9 +109,9 @@ image::Схема_1.jpg[]
 
 image::Схема_2.jpg[]
 
-image::Курсовая_6.jpg[]
+image::Курсовая_6.jpeg[]
 
-image::Курсовая_7_новая.jpg[]
+image::Курсовая_7.jpeg[]
 
 Далее нужно назначить каналы таймеров. Данная настройка производится с помощью реигстров AFRL (для портов с номером от 0 до 7) и AFRH (для портов с номером от 8 до 15).
 
