--- a/cursovoi/Course_Work_Leonov_Platonov.adoc
+++ b/cursovoi/Course_Work_Leonov_Platonov.adoc
@@ -31,25 +31,43 @@ image::Kursovoy_variant_11_page-0003.jpg[]
 
 image::Kursovoy_variant_11_page-0004.jpg[]
 
-== Отладочная плата XNUCLEO-F411RE
+=== 2. Отладочная плата XNUCLEO-F411RE
 Отладочная плата на базе микроконтроллера STM32F411RE, представляет собой гибкую платформу, позволяющую расширять свои функциональные возможности с помощью плат расширения для Arduino и ST Morpho. Плата XNUCLLEO-F411RE изображена на рисунке 1.
 
 image::image.png[]
 
 Рисунок 1 - Отладочная плата XNUCLEO-F411RE
 
-== Плата расширения Accessory Shield
+=== 3. Плата расширения Accessory Shield
 
-Accessory Shield — это плата расширения, совместимая с популярными платформами для разработки электронных приложений, такими как Arduino UNO, Arduino Leonardo, NUCLEO, XNUCLEO и совместимыми. На плате установлены самые популярные дочерние модули, подходящие для реализации большинства задач. Плата расширения Accessory Shield представлена на рисунке 2.
+Accessory Shield - это плата расширения совместимая с популярными платформами для разработки электронных приложений, такими как Arduino UNO, Arduino Leonardo, NUCLEO, XNUCLEO и совместимыми. На плате установлены самые популярные дочерние модули, подходящие для реализации большинства задач.
+
+Особенности: +
+- Разъем расширения для подключения плат Arduino; +
+- Разъем XBee для подключения беспроводных модулей; +
+- OLED дисплей 0.96-дюймов с разрешением 128x64 пикселей; +
+- RGB светодиод; +
+- Зуммер; +
+- Потенциометр 10кОм; + 
+- 3-осевой цифровой акселерометр ADXL345; +
+-Температурный датчик LM75BDP; +
+- Джойстик 5-ти позиционный; +
+- Индикатор состояния XBee; +
+- Индикатор питания; +
+- Кнопка сброса модулей XBee и Arduino; +
+- Часы реального времени (RTC); +
+- Держатель батареи CR1220 для RTC; +
+- Драйвер RGB светодиода; +
+- Джампер выбора режима Отладка/Связь.
 
 image::Плата расширения.jpg[]
 
 Рисунок 2 - Плата расширения Accessory Shield
 
-== Переменный резистор
+=== 4. Переменный резистор
 
-Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган.
-Переменный резистор находится на плате расширения Accessory Shield с номиналом 10 кОм и подключается к каналу А0. Переменный резистор представлен на рисунках 3 и 4.
+Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. + 
+Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор (рисунок 3).
 
 image::Резистор.jpg[]
 
@@ -59,7 +77,7 @@ image::Резистор на схеме.jpg[]
 
 Рисунок 4 - Переменный резистор
 
-== Операционные Системы реального Времени
+=== 5. Операционные Системы реального Времени
 
 Дадим определение понятию "Операционные системы реального времени" или "Real Time Operating Systems".
 
@@ -75,7 +93,7 @@ image::image-2022-02-23-14-26-15-766.png[]
 
 Рисунок 5 - Операционные Системы Реального Времени
 
-== Архитектура классов
+=== 6. Архитектура классов
 
 Архитектура классов представлена на рисунке 5.
 
