--- a/cursovoi/Course_Work_Leonov_Platonov.adoc
+++ b/cursovoi/Course_Work_Leonov_Platonov.adoc
@@ -21,7 +21,7 @@
 Платонов Д.В.
 
 
-== Задание на курсовую работу
+=== 1. Задание на курсовую работу
 
 image::Kursovoy_variant_11_page-0001.jpg[]
 
