--- a/cursovoi/Course_Work_Leonov_Platonov.adoc
+++ b/cursovoi/Course_Work_Leonov_Platonov.adoc
@@ -67,9 +67,10 @@ image::Плата расширения.jpg[]
 === 4. Переменный резистор
 
 Переменные резисторы — это разновидность резисторов, электрическое сопротивление которых регулируется с помощью механического воздействия на регулировочный орган. + 
-Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор (рисунок 3).
+Из документации на плату расширения «Accessory-Shield-Schematic» можно увидеть к каким контактам подключен переменный резистор.
+На рисунке 3 изображено на какой контакт приходит контакт с переменного резистора, также взятого из документа на плату XNUCLLEO-F411RE «xnuclleo - f411re shematic».
 
-image::Резистор.jpg[]
+image::6.png[]
 
 Рисунок 3 - Переменный резистор
 
