--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -142,6 +142,17 @@ image::9.jpg[]
 регистра TIMx_CCRx.
 Поскольку регистры предварительной загрузки передаются в теневые регистры только при возникновении события обновления, перед запуском счетчика необходимо инициализировать все регистры, установив бит UG в регистре TIMx_EGR.
 
+image::15.png[] 
+Рисунок 6 - Графики широтно-импульсной модуляции
+
+ШИМ имеет следующие параметры:
+
+1) Период тактирования;
+2) Длительность импульса;
+3) Скважность — Соотношение длины импульса (tau) к периоду тактирования (T); пропорционально модулирующей величине.
+4) Коэффициент заполнения D – величина обратная скважности.
+
+
 === 9. Общение с платой через USART2
 
 Асинхронный способ передачи данных — такой способ передачи цифровых данных от передатчика к приемнику по последовательному интерфейсу, при котором данные передаются в любой момент времени. Синхронизация идет по времени — приемник и передатчик заранее договариваются о том на какой частоте будет идти обмен
