--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -147,9 +147,9 @@ image::15.png[]
 
 ШИМ имеет следующие параметры:
 
-1) Период тактирования;
-2) Длительность импульса;
-3) Скважность — Соотношение длины импульса (tau) к периоду тактирования (T); пропорционально модулирующей величине.
+1) Период тактирования; +
+2) Длительность импульса; +
+3) Скважность — Соотношение длины импульса (tau) к периоду тактирования (T); пропорционально модулирующей величине. +
 4) Коэффициент заполнения D – величина обратная скважности.
 
 
