--- a/CR/cursovoi.adoc
+++ b/CR/cursovoi.adoc
@@ -246,3 +246,11 @@ image::13.jpg[]
 __Каждый *tick* - это вызов прерывания таймера, в котором вызывается диспетчер, чьими усилиями
 проворачиваются шестеренки ОС. __
 
+=== Архитектура классов
+
+Архитектура классов представлена на рисунке 11.
+
+image::16.png[]
+Рисунок 11 - Архитектура классов в StarUML
+
+
